: Solved some bugs

--- a/Angular-Client/src/app/login/login.component.html
+++ b/Angular-Client/src/app/login/login.component.html
@@ -1,59 +1,3 @@
-<!-- <div class="container">
-  <form name="loginForm" [formGroup]="loginForm" (submit)="save()">
-    <div class="form-group">
-      <label for="UserName">Username</label>
-      <input
-        type="text"
-        name="UserName"
-        class="form-control"
-        id="UserName"
-        formControlName="UserName"
-      />
-      <div
-        *ngIf="
-          loginForm.controls.UserName.dirty &&
-          !loginForm.controls.UserName.valid
-        "
-        class="alert alert-danger"
-      >
-        <p *ngIf="loginForm.controls.UserName.errors.required">
-          Username is required
-        </p>
-      </div>
-    </div>
-
-    <div class="form-group">
-      <label for="Password">Password</label>
-      <input
-        type="password"
-        name="Password"
-        class="form-control"
-        id="Password"
-        formControlName="Password"
-      />
-      <div
-        *ngIf="
-          loginForm.controls.Password.dirty &&
-          !loginForm.controls.Password.valid
-        "
-        class="alert alert-danger"
-      >
-        <p *ngIf="loginForm.controls.Password.errors.required">
-          Password is required
-        </p>
-      </div>
-    </div>
-    <div class="form-group">
-      <input
-        type="submit"
-        value="Save"
-        [disabled]="!loginForm.valid"
-        class="btn btn-success"
-      />
-    </div>
-  </form>
-</div> -->
-
 <div class="container">
   <div class="card card-login mx-auto text-center bg-dark">
     <div class="card-header mx-auto bg-dark">
@@ -67,6 +11,9 @@
     </div>
     <div *ngIf="errorLogin" class="error-login">
       <span>Please enter correct username or password</span>
+    </div>
+    <div *ngIf="authLogin" class="error-login">
+      <span>You are not authorized by Admin.</span>
     </div>
     <div class="card-body">
       <form name="loginForm" [formGroup]="loginForm" (submit)="save()">
