--- a/Angular-Client/src/app/roles/roles.component.html
+++ b/Angular-Client/src/app/roles/roles.component.html
@@ -3,27 +3,12 @@
 <br>
 <h3 class="text-center">Roles</h3>
 <hr />
-<form
-  class="col-md-8 offset-md-2"
-  name="roleForm"
-  [formGroup]="roleForm"
-  (submit)="save()"
->
+<form class="col-md-8 offset-md-2" name="roleForm" [formGroup]="roleForm" (submit)="save()">
   <!-- role name-->
   <div class="form-group">
     <label for="Role">Role Name</label>
-    <input
-      type="text"
-      name="Role"
-      class="form-control"
-      id="Role"
-      formControlName="Role"
-      (change)="checkUniqueRole()"
-    />
-    <div
-      *ngIf="roleForm.controls.Role.dirty && !roleForm.controls.Role.valid"
-      class="alert alert-danger"
-    >
+    <input type="text" name="Role" class="form-control" id="Role" formControlName="Role" (change)="checkUniqueRole()" />
+    <div *ngIf="roleForm.controls.Role.dirty && !roleForm.controls.Role.valid" class="alert alert-danger">
       <p *ngIf="newUserForm.controls.Role.errors.required">
         Role is required
       </p>
@@ -33,18 +18,25 @@
     </div>
   </div>
 
-  <div class="form-group" >
-    <input
-      type="button"
-      value="Cancel"
-      class="btn btn-danger"
-      (click)="cancel()"
-    />
-    <input
-      type="submit"
-      value="Add Role"
-      [disabled]="!roleForm.valid"
-      class="btn btn-success"
-    />
+  <div class="form-group">
+    <input type="button" value="Cancel" class="btn btn-danger" (click)="cancel()" />
+    <input type="submit" value="Add Role" [disabled]="!roleForm.valid" class="btn btn-success" />
   </div>
 </form>
+
+<hr />
+<table class="table table-striped table-border prd">
+  <thead>
+    <tr>
+      <th>S. No.</th>
+      <th>Role Type</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let r of roles,let i = index">
+      <td>{{ i+1 }}</td>
+      <td>
+        <span>{{ r['RoleType'] }}</span>
+      </td>
+    </tr>
+  </tbody>
