--- a/Angular-Client/src/app/person-status/person-status.component.html
+++ b/Angular-Client/src/app/person-status/person-status.component.html
@@ -16,6 +16,7 @@
   <table class="table table-striped table-border prd">
     <thead>
       <tr>
+        <th><span>S No.</span></th>
         <th *ngFor="let c of tableHeaders">
           <span>{{ c }}</span>
         </th>
@@ -23,7 +24,8 @@
       </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let p of persons">
+        <tr *ngFor="let p of persons; let i = index">
+          <td><span>{{ i+1 }}</span></td>
           <td *ngFor="let c of tableHeaders" (click)="getSelectedPerson(p)">
             <span>{{ p[c] }}</span>
           </td>
@@ -32,12 +34,6 @@
             <span class="btn btn-link" (click)="rejected(p)">Rejected</span>
           </td>
         </tr>
-
-      <!-- <ng-template #nodata>
-        <tr>
-          <td>No Data Found</td>
-        </tr>
-      </ng-template> -->
     </tbody>
   </table>
 </div>
