--- a/Angular-Client/src/app/new-person/new-person.component.html
+++ b/Angular-Client/src/app/new-person/new-person.component.html
@@ -37,6 +37,7 @@
               class="form-control"
               id="FirstName"
               name="FirstName"
+              autocomplete="off"
               [(ngModel)]="person.FirstName"
               formControlName="FirstName"
             />
@@ -49,6 +50,7 @@
               class="form-control"
               id="MiddleName"
               name="MiddleName"
+              autocomplete="off"
               [(ngModel)]="person.MiddleName"
               formControlName="MiddleName"
             />
@@ -63,6 +65,7 @@
               class="form-control"
               id="LastName"
               name="LastName"
+              autocomplete="off"
               [(ngModel)]="person.LastName"
               formControlName="LastName"
             />
@@ -92,6 +95,7 @@
               class="form-control"
               id="Age"
               name="Age"
+              autocomplete="off"
               [(ngModel)]="person.Age"
               formControlName="Age"
             />
@@ -163,6 +167,7 @@
               class="form-control"
               id="FlatNumber"
               name="FlatNumber"
+              autocomplete="off"
               [(ngModel)]="person.FlatNumber"
               formControlName="FlatNumber"
             />
@@ -176,6 +181,7 @@
               class="form-control"
               id="SocietyName"
               name="SocietyName"
+              autocomplete="off"
               [(ngModel)]="person.SocietyName"
               formControlName="SocietyName"
             />
@@ -190,6 +196,7 @@
               class="form-control"
               id="AreaName"
               name="AreaName"
+              autocomplete="off"
               [(ngModel)]="person.AreaName"
               formControlName="AreaName"
             />
@@ -204,6 +211,7 @@
               class="form-control"
               id="Pincode"
               name="Pincode"
+              autocomplete="off"
               [(ngModel)]="person.Pincode"
               formControlName="Pincode"
             />
@@ -219,6 +227,7 @@
               class="form-control"
               id="City"
               name="City"
+              autocomplete="off"
               [(ngModel)]="person.City"
               formControlName="City"
             />
@@ -232,6 +241,7 @@
               class="form-control"
               id="State"
               name="State"
+              autocomplete="off"
               [(ngModel)]="person.State"
               formControlName="State"
             />
@@ -250,6 +260,7 @@
               class="form-control"
               id="MobileNo"
               name="MobileNo"
+              autocomplete="off"
               [(ngModel)]="person.MobileNo"
               formControlName="MobileNo"
             />
@@ -263,6 +274,7 @@
               class="form-control"
               id="PhoneNo"
               name="PhoneNo"
+              autocomplete="off"
               [(ngModel)]="person.PhoneNo"
               formControlName="PhoneNo"
             />
@@ -278,6 +290,7 @@
             class="form-control"
             id="BirthSign"
             name="BirthSign"
+            autocomplete="off"
             [(ngModel)]="person.BirthSign"
             formControlName="BirthSign"
           />
@@ -294,6 +307,7 @@
             class="form-control"
             id="PhysicalDisability"
             name="PhysicalDisability"
+            autocomplete="off"
             [(ngModel)]="person.PhysicalDisability"
             formControlName="PhysicalDisability"
           />
