--- a/Angular-Client/src/app/new-user/new-user.component.html
+++ b/Angular-Client/src/app/new-user/new-user.component.html
@@ -16,6 +16,7 @@
       class="form-control"
       id="UserName"
       formControlName="UserName"
+      autocomplete="off"
       (change)="checkUniqueUserName()"
     />
     <div
@@ -43,6 +44,7 @@
       class="form-control"
       id="Email"
       formControlName="Email"
+      autocomplete="off"
       (change)="checkUniqueEmail()"
     />
     <div
@@ -69,6 +71,7 @@
       class="form-control"
       id="Mobile"
       formControlName="Mobile"
+      autocomplete="off"
       (change)="checkUniqueMobile()"
     />
     <div
@@ -94,6 +97,7 @@
       name="Password"
       class="form-control"
       id="Password"
+      autocomplete="off"
       formControlName="Password"
     />
     <div
